create components createTable/add style/min.validation form

--- a/src/components/createTable/createTable.scss
+++ b/src/components/createTable/createTable.scss
@@ -2,13 +2,21 @@
   border-bottom: 1px solid #fff !important;
   box-shadow: 0 1px 0 0 #fff !important;
   &:focus {
-    border-bottom: 1px solid #1e88e5    !important;
-    box-shadow: 0 1px 0 0 #1e88e5    !important;
+    border-bottom: 1px solid #1e88e5 !important;
+    box-shadow: 0 1px 0 0 #1e88e5 !important;
     + label {
-      color: #1e88e5    !important;
+      color: #1e88e5 !important;
     }
   }
   + label {
     color: #fff;
+  }
+}
+
+.error {
+  border-bottom: 1px solid #d32f2f !important;
+  box-shadow: 0 1px 0 0 #d32f2f !important;
+  + label {
+    color: #d32f2f !important;
   }
 }
