--- a/src/components/listOfTable/listOfTable.scss
+++ b/src/components/listOfTable/listOfTable.scss
@@ -1,3 +1,26 @@
-.mt20{
+.mt20 {
   margin-top: 20px;
 }
+.mr0 {
+  margin-right: 0 !important;
+}
+
+.card {
+  transition: box-shadow ease-out 1s;
+  &:hover {
+    box-shadow: 2px 0px 10px 2px #1e88e5;
+  }
+  &-action {
+    padding: 0 !important;
+  }
+  &-title {
+    font-size: 25px !important;
+    font-weight: bold !important;
+    width: 100% !important;
+    color: #000000 !important;
+  }
+}
+.width100{
+  width: 100%;
+}
+
