--- a/src/pages/board/board.scss
+++ b/src/pages/board/board.scss
@@ -1,11 +1,11 @@
 .ml20 {
   margin-left: 20px !important;
 }
-.mt40 {
-  margin-top: 40px !important;
-}
-.mb20{
+.mb20 {
   margin-bottom: 20px !important;
+}
+.mt20 {
+  margin-top: 20px;
 }
 .flex-1 {
   flex: 1;
@@ -16,3 +16,34 @@
     color: red !important;
   }
 }
+.column {
+  display: flex;
+  align-items: flex-start;
+  flex-wrap: nowrap;
+}
+.column-block {
+  background-color: #dfe1e6;
+  border-radius: 5px;
+  box-sizing: border-box;
+  min-width: 300px;
+  min-height: 300px;
+  padding: 10px 20px;
+  &__title {
+    display: block;
+    margin: 10px 0 0 10px;
+    font-size: 20px;
+    font-weight: bold;
+  }
+  &__text {
+    width: 100%;
+    height: 40px;
+    background-color: #fff;
+    padding: 10px;
+    margin-bottom: 10px;
+    font-size: 14px;
+  }
+}
+
+/* .cacolumnrd::-webkit-scrollbar {
+  display: none;
+} */
