--- a/src/pages/board/board.scss
+++ b/src/pages/board/board.scss
@@ -29,18 +29,14 @@
   max-width: max-content;
 }
 .column {
-  /*   display: flex;
-  align-items: flex-start;
-  flex-wrap: nowrap; */
   padding: 10px 0 0 10px;
   height: calc(100% - 50px);
   white-space: nowrap;
   overflow-x: auto;
-  min-width: 100vw;
-  max-width: max-content;
+  overflow-y: hidden;
+  max-width: 100vw;
   &-wrapper {
     width: 290px;
-    height: calc(100% - 40px);
     box-sizing: border-box;
     display: inline-block;
     vertical-align: top;
@@ -55,7 +51,7 @@
     box-sizing: border-box;
     white-space: normal;
     margin: 0 4px;
-    max-height: 100%;
+    max-height: calc(100vh - 80px);
     background-color: #dfe1e6;
     &__title {
       display: flex;
@@ -65,21 +61,23 @@
       font-weight: bold;
     }
     &__list {
-      padding: 10px 12px !important;
+      padding: 0 12px !important;
+      overflow-x: hidden;
       overflow-y: auto;
-      min-height: max-content;
     }
     &__text {
       display: flex;
-      align-items: center;
-      justify-content: space-between;
+      min-height: 45px;
       background: #fff;
-      box-shadow: 0 1px 4px rgba(9, 45, 66, 0.25);
+      box-shadow: 0 2px 4px rgba(9, 45, 66, 0.25);
       border-radius: 3px;
       padding: 12px;
-      margin-bottom: 8px;
       line-height: 19px;
-      white-space: normal;
+      white-space: pre-wrap;
+      margin-bottom: 10px;
+      &:last-child {
+        margin-bottom: 5px;
+      }
     }
   }
   &-form {
@@ -118,80 +116,3 @@
     }
   }
 }
-
-/*   &-block {
-    display: flex;
-    flex-direction: column;
-    background-color: #ede7f6;
-    border-radius: 2px;
-    max-height: 100%;
-    width: 300px;
-    &__title {
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      padding: 12px;
-    }
-    &__list {
-      padding: 0 12px;
-      overflow-y: auto;
-      overflow-x: hidden;
-    }
-    &__text {
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      background: #fff;
-      box-shadow: 0 1px 4px rgba(9, 45, 66, 0.25);
-      border-radius: 3px;
-      padding: 12px;
-      margin-bottom: 8px;
-      line-height: 19px;
-      white-space: normal;
-    }
-  }
-  &-form {
-    position: absolute;
-    bottom: 0;
-    margin-bottom: 10px;
-    width: 100%;
-    padding-left: 10px;
-    padding-right: 10px;
-    &__button {
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      &-addcard {
-        position: absolute;
-        bottom: 0;
-        width: 100%;
-        padding: 10px;
-        display: flex;
-        justify-content: center;
-        cursor: pointer;
-        &:hover {
-          background-color: darken(#ede7f6, 5%);
-        }
-      }
-    }
-    &__textarea {
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      background: #fff;
-      box-shadow: 0 1px 4px rgba(9,45,66,.25);
-      border-radius: 3px;
-      padding: 12px;
-      margin-bottom: 8px;
-      line-height: 19px;
-      white-space: normal;
-      &:focus {
-        outline: none;
-      }
-    }
-  }
-}
- */
-/* .cacolumnrd::-webkit-scrollbar {
-  display: none;
-} */
